# lh-demo-project

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/web/: DESIGN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  EChart.tsx  api.ts  format.ts  strategyConstraints.ts  styles.css
apps/web/tests/: e2e-smoke.test.mjs  ui-regressions.test.mjs
data/market/: aapl_1d_2024_2026.csv
data/sample/: bars_1d.csv
docs/: architecture.md  data-sources.md
docs/optimization/: 2026-05-22-data-strategy-optimization-report.md
docs/plans/: 2026-05-21-quant-workbench-upgrade-design.md  2026-05-21-workbench-phase1-2-implementation.md  2026-05-22-quant-platform-foundation-plan.md  2026-05-26-lh-quant-ui-optimization-plan.md  2026-05-26-market-data-provider-design.md  2026-05-26-market-data-provider-implementation-plan.md
docs/research/: 2026-05-21-quant-frameworks.md  2026-05-26-ricequant-joinquant-ui-ux-reverse-engineering.md
src/lh_quant/: __init__.py  cli.py
src/lh_quant/api/: __init__.py  app.py
src/lh_quant/backtest/: __init__.py  engine.py  metrics.py
src/lh_quant/data/: __init__.py  (+6 more)
tests/: test_akshare_provider.py  test_api_app.py  test_backtest_engine.py  test_backtest_metrics.py  test_chinese_text.py  test_cli.py  test_data_contracts.py  test_data_providers.py  test_data_repository.py  test_factor_registry.py  test_moving_average_strategy.py  test_sample_data.py  test_storage_database.py  test_strategy_registry.py  test_tushare_provider.py  test_yahoo_provider.py
(+25 files in other folders)
